# Software-game-complex

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  resources.qrc
include/Admin/: admin.h  main-menu.h  question-designer.h
include/utils/: enums.h
resources/: resources.qrc
resources/Admin/: resources.qrc
resources/Admin/i18n/: SGC_ru_RU.ts
resources/Admin/ui/: .QuestionCreator.qml.kate-swp  GameManagement.qml  MainMenu.qml  NumberOfCorrectAnswers.qml  QuestionArea.qml  QuestionConstructor.qml  QuestionCreator.qml  QuestionEditor.qml  QuestionEditorPage.qml  ResultArea.qml  ResultsViewer.qml  SituationConstructor.qml  Tag.qml  Theme.qml  ThemeTextField.qml  main.qml
resources/Admin/ui/HelperWidgets/: MyVerticalListView.qml
resources/Admin/ui/QuestionEditorWidgets/: EditorUtils.js  TypeInQuestionEditor.qml
resources/Admin/ui/QuestionWidgets/: BaseQuestionEditor.qml  DropDownFillQuestionEditor.qml  EditorUtils.js  FillQuestionEditor.qml  MatchQuestionEditor.qml  MultipleChoiceQuestionEditor.qml  MultipleColumnsAnswersQuestionEditor.qml  OneColumnAnswersQuestionEditor.qml  RegularQuestionInput.qml  SingleChoiceQuestionEditor.qml  TypeInFillQuestionEditor.qml  TypeInQuestionEditor.qml
resources/Admin/ui/QuestionWidgets/AnswerWidgets/: SingleChoiceAnswerInput.qml
resources/Admin/ui/SituationWidgets/: CanvasComponent.qml  EdgeComponent.qml  NodeComponent.qml  SelectableElement.qml
resources/Client/: resources.qrc
resources/Client/i18n/: SGC_ru_RU.ts
resources/Client/ui/: ExamFinishedPage.qml  FillInArea.qml  GameManagement.qml  GamePage.qml  MainMenu.qml  MatchArea.qml  QuestionArea.qml  QuestionConstructor.qml  QuestionPage.qml  ResultsViewer.qml  main.qml
resources/Client/ui/QuestionArea/: DropdownFillArea.qml  FillArea.qml  FillItemPlacer.qml  MatchArea.qml  MultipleChoiceArea.qml  SingleChoiceArea.qml  TypeInArea.qml  TypeInFillArea.qml
resources/Client/ui/QuestionArea/FillComponents/: DropDownComponent.qml  InputComponent.qml  TextComponent.qml
resources/Client/ui/QuestionEditorWidgets/: FillQuestionEditor.qml  TypeInFillQuestionEditor.qml
resources/Client/ui/QuestionWidgets/: BaseQuestionEditor.qml  DropDownFillQuestionEditor.qml  FillQuestionEditor.qml  MultipleChoiceQuestionEditor.qml  MultipleColumnsAnswersQuestionEditor.qml  OneColumnAnswersQuestionEditor.qml  TypeInQuestionEditor.qml
resources/Client/ui/SituationWidgets/: CategoryElement.qml  EdgeComponent.qml  NodeComponent.qml  SelectableElement.qml  SituationUtils.js
resources/i18n/: SGC_ru_RU.ts
resources/ui/: GameManagement.qml  MainMenu.qml  QuestionConstructor.qml  QuestionEditorPage.qml  SituationConstructor.qml  main.qml
resources/ui/QuestionEditorWidgets/: AnswerInput.qml  BaseQuestionEditor.qml  ChoiceQuestionEditor.qml  DropDownFillQuestionEditor.qml  FillQuestionEditor.qml  MatchQuestionEditor.qml  MultipleChoiceQuestionEditor.qml  MultipleColumnsAnswersQuestionEditor.qml  OneColumnAnswersQuestionEditor.qml  RegularQuestionInput.qml  SingleChoiceAnswerInput.qml  SingleChoiceQuestionEditor.qml  SingleChoiceQuestionEditor2.qml  TypeInFillQuestionEditor.qml  TypeInQuestionEditor.qml  TypeInQuestionEditor2.qml
resources/ui/QuestionEditorWidgets/AnswerWidgets/: AnswerInput.qml  MultipleChoiceAnswerInput.qml
resources/ui/SituationWidgets/: CanvasComponent.qml  CategoryElement.qml  DividerElement.qml  EdgeComponent.qml  NodeComponent.qml  SelectableElement.qml
src/: CMakeLists.txt
src/Admin/: CMakeLists.txt  admin.cpp  main-menu.cpp  main.cpp  question-designer.cpp
src/Admin/AdminBackend/: Admin.cpp  Admin.h  ListModel.cpp  ListModel.h  NumberOfQuestion.h  Themes.cpp  Themes.h
src/Admin/DB/: database.cpp  database.h  listmodel.cpp  listmodel.h
src/Admin/GameManagement/: backendLayer.cpp  backendLayer.h
src/Admin/QuestionCreator/include/: QuestionDifficulty.h  QuestionSaver.h  QuestionTypeItem.h
src/Admin/ResultViewer/: TableElement.cpp  TableElement.h  TableModel.cpp  TableModel.h
src/Admin/SituationConstructor/: ProtectionTool.h  SimpleProtectionTool.cpp  SimpleProtectionTool.h  SimpleSituationEdge.cpp  SimpleSituationEdge.h  SimpleSituationNode.cpp  SimpleSituationNode.h  SituationEdge.h  SituationItem.h  SituationModel.cpp  SituationModel.h  SituationModifyHelper.h  SituationNet.h  SituationNode.h  SituationUtils.cpp  SituationUtils.h
src/Admin/TcpServer/: TcpServer.cpp  TcpServer.hpp
src/Admin/Test/: SingleChoiceAnswer.cpp  SingleChoiceQuestion.cpp  TypeInAnswer.cpp  TypeInFillQuestion.cpp  TypeInQuestion.cpp
src/Admin/Test/include/: ChoiceQuestion.h  Question.h  SingleChoiceAnswer.h  TypeInAnswer.h
src/Client/: CMakeLists.txt  main.cpp
src/Client/QuestionCreator/include/: QuestionCreatorModel.h  QuestionSaver.h  QuestionThemeItem.h  QuestionThemeModel.h  QuestionThemes.h  QuestionTypeListModel.h
src/Client/TcpClient/: TcpClient.cpp  TcpClient.hpp
src/Client/Test/: ChoiceAnswer.cpp  ChoiceQuestion.cpp  DropDownFillQuestion.cpp  FillQuestion.cpp  MultipleChoiceAnswer.cpp  MultipleChoiceQuestion.cpp  Question.cpp
src/Client/Test/include/: ChoiceAnswer.h  DropDownFillQuestion.h  FillQuestion.h  MultipleChoiceAnswer.h  MultipleChoiceQuestion.h  SingleChoiceQuestion.h  TypeInFillQuestion.h  TypeInQuestion.h
src/Common/: CMakeLists.txt
src/Common/Situation/: TestSituation.cpp  TestSituation.h
src/utils/: enums.cpp
